<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/colcur"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/setcurnum"
            app:layout_constraintStart_toEndOf="@+id/textnuminfo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.625" />

        <TextView
            android:id="@+id/textnuminfo"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:background="@drawable/backdraw"
            android:padding="5dp"
            android:paddingLeft="7dp"
            android:text="@string/colcr"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <Button
            android:id="@+id/setcurnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:padding="5dp"
            android:text="@string/BSet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cur_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layoutManager="LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/Applycur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:text="@string/Apply" />

    </LinearLayout>

</LinearLayout>